@@ -600,4 +600,9 @@ void	DBexecute_multiple_query(const char *query, const char *field_name, zbx_vec
 void	zbx_create_services_lock();
 void	zbx_destroy_services_lock();
 
+#ifdef HAVE_POSTGRESQL
+size_t	DBbytea_escape(const u_char *input, size_t ilen, char **output, size_t *olen);
+size_t	DBbytea_unescape(u_char *io);
+#endif
+
 #endif
