@@ -310,7 +310,7 @@ static int	process_record(char **sql, size_t *sql_alloc, size_t *sql_offset, int
 				size_t	len;
 
 				len = zbx_hex2binary(buffer);
-				zbx_pg_escape_bytea((u_char *)buffer, len, &tmp, &tmp_alloc);
+				DBbytea_escape((u_char *)buffer, len, &tmp, &tmp_alloc);
 				zbx_snprintf_alloc(sql, sql_alloc, sql_offset, "'%s',", tmp);
 #else
 				zbx_snprintf_alloc(sql, sql_alloc, sql_offset, "0x%s,", buffer);
